ls-seoul/ns-undersky/21-colosseum.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colosseum
  namespace: undersky
  labels:
    app: colosseum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colosseum
  template:
    metadata:
      labels:
        app: colosseum
    spec:
      containers:
      - image: hellodhlyn/undersky-colosseum
        name: colosseum
