ls-seoul/ns-undersky/20-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: undersky
  labels:
    app: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: undersky
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: hellodhlyn/undersky-api
        name: api
        ports:
        - containerPort: 8000
          name: api-port
