ls-seoul/ns-undersky/30-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: undersky
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: undersky
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: hellodhlyn/undersky-web:v1.0.0
        name: web
        ports:
        - containerPort: 8080
          name: web-port
